<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/danube"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_keeping"
        android:textSize="40dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/appSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/appSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:fontFamily="sans-serif"
        android:text="@string/game_select_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        app:columnCount="3"
        app:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appSubTitle">

        <Button
            android:id="@+id/game_badminton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_margin="2sp"
            android:gravity="fill"
            android:text="@string/badminton"
            android:textAllCaps="true"
            android:textColor="@color/denim"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/game_cricket"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_margin="2sp"
            android:gravity="fill"
            android:text="@string/cricket"
            android:textColor="@color/denim"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/game_football"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_margin="2sp"
            android:gravity="fill"
            android:text="@string/football"
            android:textAllCaps="true"
            android:textColor="@color/denim"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_row="0" />


    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
